- FEATURE: charging mode (when connect power to turned off watches, show battery icon + % bar instead of fully start)
- FEATURE: "Cassete futurism" clock face
- FEATURE: "Knight Rider speaker" clock face
- FEATURE: Analog wazchface shows date
- FEATURE: 3-slot alarm
- FEATURE: calendar can be reset to the current moon by long touch instead of PEKshort
- REFACTOR: Move apps related function to AppRunner from MainScreen #refactor
- REFACTOR: display adjust is now set in percentage (1 - 100) (and stored in resgistry after shutdown)
- REFACTOR: reset display typography method instead of calling all methods to set default color, font & szie
- BUGFIX: Fix read bma interupt in MoveSensor isTilt func which caused not waked by tilt in some watch faces
- BUGFIX: analog + planetoid watch faces update every second (check for prev second)

cyberWatch 0.4
========================
- FEATURE: set mainscreen to datetime app after power on / wakeup (touch)
- FEATURE: wakeup to locked screen, unlock by PEKshort
- FEATURE: system event subsystem
- FEATURE: when display always on - and inactivity conditions are true, set to default screen and lock ui
- FEATURE: when display always on - detect if watch are off hand (and no moving e.g. on table) - goes sleep to prevent energy consumption when not on hand
- FEATURE: "about screen" with version, commit hash and date and time of compilation
- FEATURE: "about screen" also contains uptime and time unplugged from power

cyberWatch 0.3
========================
- FEATURE: system ticker + do some operations only every Xth tick (battery savings)
- REFACTORING: rename System to Core package and create Hardware subpackage
- BUGIFX: milliseconds instead of microseconds in sleep method

cyberWatch 0.2
========================
 - FEATURE: partially support for TTGO Watch V2 (motor operation only if LILYGO_WATCH_HAS_MOTOR)
 - FEATURE: synchronize date & time with computer during compile/upload