@@ -115,7 +115,8 @@
 	<a name="apps-switching"></a>
 	<h3>Switching between apps</h3>
 	<div>
-		Switching between apps is handled by horizontal swipe.
+		Switching between apps is handled by horizontal swipe. Crown button press is used to return to watch applciation, if hasn't special function
+		(e.g. start/stop on stopwatch app).
 	</div>
 
 	<a name="power-onoff"></a>
@@ -156,7 +157,7 @@
 	<h3>Calendar</h3>
 	<div>
 		When entering this app, current month and current day (by blue box) is set.
-		Months can be changed by vertical swipe, pressing crown (button) resets calendar to current month and day.
+		Months can be changed by vertical swipe, long touch (&gt; 0.5s) resets calendar to current month and day.
 	</div>
 
 	<a name="stopwatch"></a>
