@@ -1,0 +1,8 @@
+#include "App.h"
+
+#include "UserInterface/AppRunner.h"
+
+bool App::handlePEKShort() {
+	AppRunner::getInstance()->setToDefaultApp();
+	return true;
+}
